--- a/action.yml
+++ b/action.yml
@@ -29,7 +29,7 @@ runs:
       env:
         GITHUB_ACTION_PATH: ${{ github.action_path }}
 
-    - name: Run goodbye.sh
-      run: goodbye.sh
+    - name: Run hello.sh
+      run: hello.sh
       shell: bash
 
