--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       - id: foo 
         uses: rahuldas1108/hello-world-GHA@v3
         with:
-          who-to-greet: 'Mona the Octocat'
+          who-to-greet: 'Rahul-GHA_user'
       - run: echo random-number "$RANDOM_NUMBER"
         shell: bash
         env:
